// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Custom Heading Block <Save /> snapshot 001: 最小限の属性 1`] = `
<DocumentFragment>
  <h2
    class="ystdb-custom-heading"
  >
    カスタム見出し
  </h2>
</DocumentFragment>
`;

exports[`Custom Heading Block <Save /> snapshot 002: レベル1の見出し 1`] = `
<DocumentFragment>
  <h1
    class="ystdb-custom-heading"
  >
    カスタム見出し H1
  </h1>
</DocumentFragment>
`;

exports[`Custom Heading Block <Save /> snapshot 003: レベル3の見出し 1`] = `
<DocumentFragment>
  <h3
    class="ystdb-custom-heading"
  >
    カスタム見出し H3
  </h3>
</DocumentFragment>
`;

exports[`Custom Heading Block <Save /> snapshot 004: プリセットフォントサイズの反映はBlock Supportsに任せる 1`] = `
<DocumentFragment>
  <h2
    class="ystdb-custom-heading"
  >
    フォントサイズ指定
  </h2>
</DocumentFragment>
`;

exports[`Custom Heading Block <Save /> snapshot 005: 任意フォントサイズの反映はBlock Supportsに任せる 1`] = `
<DocumentFragment>
  <h2
    class="ystdb-custom-heading"
  >
    カスタムフォントサイズ指定
  </h2>
</DocumentFragment>
`;

exports[`Custom Heading Block <Save /> snapshot 006: レスポンシブフォントサイズ指定 1`] = `
<DocumentFragment>
  <h2
    class="ystdb-custom-heading"
    style="--ystdb--desktop--heading--font-size: 2rem; --ystdb--tablet--heading--font-size: 1.5rem; --ystdb--mobile--heading--font-size: 1.2rem;"
  >
    レスポンシブフォントサイズ指定
  </h2>
</DocumentFragment>
`;

exports[`Custom Heading Block <Save /> snapshot 007: テキスト中央揃え 1`] = `
<DocumentFragment>
  <h2
    class="ystdb-custom-heading"
  >
    テキストセンター揃え
  </h2>
</DocumentFragment>
`;

exports[`Custom Heading Block <Save /> snapshot 008: テキスト右揃え 1`] = `
<DocumentFragment>
  <h2
    class="ystdb-custom-heading"
  >
    テキスト右揃え
  </h2>
</DocumentFragment>
`;

exports[`Custom Heading Block <Save /> snapshot 009: スタイルクリア有効 1`] = `
<DocumentFragment>
  <h2
    class="ystdb-custom-heading is-clear-style"
  >
    スタイルクリアあり
  </h2>
</DocumentFragment>
`;

exports[`Custom Heading Block <Save /> snapshot 010: 複数属性の組み合わせ 1`] = `
<DocumentFragment>
  <h3
    class="ystdb-custom-heading"
  >
    全属性指定
  </h3>
</DocumentFragment>
`;

exports[`Custom Heading Block <Save /> snapshot 011: カスタムフォントサイズとレスポンシブフォントサイズの組み合わせ 1`] = `
<DocumentFragment>
  <h2
    class="ystdb-custom-heading"
    style="--ystdb--desktop--heading--font-size: 2rem; --ystdb--tablet--heading--font-size: 1.5rem; --ystdb--mobile--heading--font-size: 1.2rem;"
  >
    カスタム＆レスポンシブ
  </h2>
</DocumentFragment>
`;

exports[`Custom Heading Block <Save /> snapshot 012: プリセットと任意フォントサイズの組み合わせ 1`] = `
<DocumentFragment>
  <h2
    class="ystdb-custom-heading"
  >
    fontSize優先
  </h2>
</DocumentFragment>
`;

exports[`Custom Heading Block <Save /> snapshot 013: プリセットとレスポンシブフォントサイズの組み合わせ 1`] = `
<DocumentFragment>
  <h2
    class="ystdb-custom-heading"
    style="--ystdb--desktop--heading--font-size: 2rem; --ystdb--tablet--heading--font-size: 1.5rem; --ystdb--mobile--heading--font-size: 1.2rem;"
  >
    fontSize優先
  </h2>
</DocumentFragment>
`;

exports[`Custom Heading Block <Save /> snapshot 014: プリセット、任意値、レスポンシブ値の組み合わせ 1`] = `
<DocumentFragment>
  <h2
    class="ystdb-custom-heading"
    style="--ystdb--desktop--heading--font-size: 2rem; --ystdb--tablet--heading--font-size: 1.5rem; --ystdb--mobile--heading--font-size: 1.2rem;"
  >
    fontSize優先
  </h2>
</DocumentFragment>
`;

exports[`Custom Heading Block <Save /> snapshot 015: レスポンシブフォントサイズ（desktopのみ） 1`] = `
<DocumentFragment>
  <h2
    class="ystdb-custom-heading"
    style="--ystdb--desktop--heading--font-size: 2rem;"
  >
    デスクトップのみ
  </h2>
</DocumentFragment>
`;

exports[`Custom Heading Block <Save /> snapshot 016: レスポンシブフォントサイズ（tabletのみ） 1`] = `
<DocumentFragment>
  <h2
    class="ystdb-custom-heading"
    style="--ystdb--tablet--heading--font-size: 1.5rem;"
  >
    タブレットのみ
  </h2>
</DocumentFragment>
`;

exports[`Custom Heading Block <Save /> snapshot 017: レスポンシブフォントサイズ（mobileのみ） 1`] = `
<DocumentFragment>
  <h2
    class="ystdb-custom-heading"
    style="--ystdb--mobile--heading--font-size: 1.2rem;"
  >
    モバイルのみ
  </h2>
</DocumentFragment>
`;

exports[`Custom Heading Block <Save /> snapshot 018: レスポンシブフォントサイズ（desktop + tablet） 1`] = `
<DocumentFragment>
  <h2
    class="ystdb-custom-heading"
    style="--ystdb--desktop--heading--font-size: 2rem; --ystdb--tablet--heading--font-size: 1.5rem;"
  >
    デスクトップ＋タブレット
  </h2>
</DocumentFragment>
`;

exports[`Custom Heading Block <Save /> snapshot 019: レスポンシブフォントサイズ（desktop + mobile） 1`] = `
<DocumentFragment>
  <h2
    class="ystdb-custom-heading"
    style="--ystdb--desktop--heading--font-size: 2rem; --ystdb--mobile--heading--font-size: 1.2rem;"
  >
    デスクトップ＋モバイル
  </h2>
</DocumentFragment>
`;

exports[`Custom Heading Block <Save /> snapshot 020: レスポンシブフォントサイズ（tablet + mobile） 1`] = `
<DocumentFragment>
  <h2
    class="ystdb-custom-heading"
    style="--ystdb--tablet--heading--font-size: 1.5rem; --ystdb--mobile--heading--font-size: 1.2rem;"
  >
    タブレット＋モバイル
  </h2>
</DocumentFragment>
`;

exports[`Custom Heading Block <Save /> snapshot 021: 文字色追加(クラス) 1`] = `
<DocumentFragment>
  <h2
    class="ystdb-custom-heading"
  >
    文字色class指定
  </h2>
</DocumentFragment>
`;

exports[`Custom Heading Block <Save /> snapshot 022: 文字色追加(カスタム) 1`] = `
<DocumentFragment>
  <h2
    class="ystdb-custom-heading"
  >
    文字色カスタム指定
  </h2>
</DocumentFragment>
`;

exports[`Custom Heading Block <Save /> snapshot 023: 文字太さ(400) 1`] = `
<DocumentFragment>
  <h2
    class="ystdb-custom-heading"
  >
    文字太さ指定(400)
  </h2>
</DocumentFragment>
`;

exports[`Custom Heading Block <Save /> snapshot 024: 文字太さ(700) 1`] = `
<DocumentFragment>
  <h2
    class="ystdb-custom-heading"
  >
    文字太さ指定(700)
  </h2>
</DocumentFragment>
`;

exports[`Custom Heading Block <Save /> snapshot 025: 文字スタイル(italic) 1`] = `
<DocumentFragment>
  <h2
    class="ystdb-custom-heading"
  >
    文字スタイル指定(italic)
  </h2>
</DocumentFragment>
`;

exports[`Custom Heading Block <Save /> snapshot 026: 文字スタイル(normal) 1`] = `
<DocumentFragment>
  <h2
    class="ystdb-custom-heading"
  >
    文字スタイル指定(normal)
  </h2>
</DocumentFragment>
`;

exports[`Custom Heading Block <Save /> snapshot 027: 文字間隔指定 1`] = `
<DocumentFragment>
  <h2
    class="ystdb-custom-heading"
  >
    文字間隔指定
  </h2>
</DocumentFragment>
`;

exports[`Custom Heading Block <Save /> snapshot 028: 行の高さ指定 1`] = `
<DocumentFragment>
  <h2
    class="ystdb-custom-heading"
  >
    行の高さ指定
  </h2>
</DocumentFragment>
`;

exports[`Custom Heading Block <Save /> snapshot 029: 行の高さ指定(0指定) 1`] = `
<DocumentFragment>
  <h2
    class="ystdb-custom-heading"
  >
    行の高さ指定(0指定)
  </h2>
</DocumentFragment>
`;

exports[`Custom Heading Block <Save /> snapshot 030: フォントファミリー指定 1`] = `
<DocumentFragment>
  <h2
    class="ystdb-custom-heading"
  >
    フォントファミリー指定
  </h2>
</DocumentFragment>
`;

exports[`Custom Heading Block <Save /> snapshot 031: 外側余白と内側余白指定 1`] = `
<DocumentFragment>
  <h2
    class="ystdb-custom-heading"
    style="margin-top: 1rem; margin-bottom: 2rem; padding-right: 3rem; padding-left: var(--wp--preset--spacing--40); --ystdb--desktop--custom-heading--margin-top: 4rem; --ystdb--mobile--custom-heading--padding-bottom: 5rem;"
  >
    余白指定
  </h2>
</DocumentFragment>
`;
